# CV_project

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/cv_pose/: __init__.py  analyzers.py  app.py  geometry.py  models.py  pose.py  reporting.py  workout.py
src/cv_pose_fitness.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_geometry.py  test_workout.py
