[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cv-pose-fitness"
version = "0.1.0"
description = "Local AI fitness pose estimation with webcam coaching and session reports"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mediapipe==0.10.14",
    "numpy>=1.26.0",
    "opencv-python>=4.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
cv-pose = "cv_pose.app:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]

